Update to actions/upload-artifact@latest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@latest
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@latest
         with:
           python-version: "3.11"
       - name: Install dependencies
@@ -23,7 +23,7 @@ jobs:
         run: |
           pytest tests/ --html=report.html
       - name: Upload test report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@latest
         with:
           name: test-report
           path: report.html
@@ -31,9 +31,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@latest
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@latest
         with:
           python-version: "3.11"
       - name: Install dependencies
@@ -44,7 +44,7 @@ jobs:
         run: |
           flake8 --format=html --htmldir=flake8_report
       - name: Upload lint report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@latest
         with:
           name: lint-report
           path: flake8_report/index.html
