resolve pytest problems

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          pytest tests/ --html=report.html
+                    pytest --import-mode=append tests/ --html=report.html
       - name: Upload test report
         uses: actions/upload-artifact@v4.6.1
         with:
