--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-python@v5.4.0
         with:
           python-version: "3.11"
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV 
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
