--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      DISABLE_SOUND: 1
     steps:
       - uses: actions/checkout@v4.2.2
       - name: Set up Python
@@ -28,6 +30,7 @@ jobs:
         with:
           name: test-report
           path: report.html
+     
 
   lint:
     runs-on: ubuntu-latest
