--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,17 @@ jobs:
         uses: actions/setup-python@v5.4.0
         with:
           python-version: "3.11"
-      - name: Install dependencies
+      - name: Install SDL dependencies
         run: |
-          sudo apt-get install -y libsdl2-mixer-2.0-0  # Додаємо залежності SDL
+          sudo add-apt-repository universe -y
+          sudo apt-get update
+          sudo apt-get install -y libsdl2-mixer-2.0-0v5
+      - name: Install Python dependencies
+        run: |
           pip install -r requirements.txt
       - name: Run tests
         env:
-          SDL_AUDIODRIVER: dummy  
+          CI: "true" 
         run: |
           pytest tests/ --html=report.html
       - name: Upload test report
