--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
       - name: Set up Python
         uses: actions/setup-python@v5.4.0
         with:
@@ -29,10 +31,10 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         env:
-          SDL_AUDIODRIVER: dummy  # Вимикаємо звук
+          SDL_AUDIODRIVER: dummy
           CI: "true"
         run: |
-          pytest tests/ --html=report.html
+          pytest tests/ --import-mode=append --html=report.html
       - name: Upload test report
         uses: actions/upload-artifact@v4.6.1
         with:
