--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 pytest==7.0.0
 pytest-html==3.1.1
 flake8==4.0.1
-flake8-html==0.4.1
 pygame==2.6.1
 jinja2>=3.1.0
 pytest-mock>=3.14.0
+Jinja2==3.0.3
+markupsafe==2.0.1
+flake8-html==0.4.3
