--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ flake8==4.0.1
 pygame==2.6.1
 jinja2>=3.1.0
 pytest-mock>=3.14.0
-Jinja2==3.0.3
-markupsafe==2.0.1
+markupsafe>=2.1.0 
 flake8-html==0.4.3
+
+ 
